xee-xpath/tests/snapshots/xpath__castable_as_integer_empty_sequence_question_mark.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() castable as xs:integer?\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    true,
                ),
            ),
        ),
    },
)
