xee-xpath/tests/snapshots/xpath__castable_as_integer_failure.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'A' castable as xs:integer\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
