xee-xpath/tests/snapshots/xpath__comma.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1, 2\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
            ],
        ),
    },
)
