xee-xpath/tests/snapshots/xpath__comma_simple_map2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"(1, 2), (3, 4), (5, 6) ! (. + 1)\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    Integer(
                        Integer,
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        3,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        6,
                    ),
                ),
                Atomic(
                    Integer(
                        Integer,
                        7,
                    ),
                ),
            ],
        ),
    },
)
