xee-xpath/tests/snapshots/xpath__compare_complex_collation_argument.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"compare('a', 'b', ((), 'http://www.w3.org/2005/xpath-functions/collation/codepoint', ()))\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    -1,
                ),
            ),
        ),
    },
)
