xee-xpath/tests/snapshots/xpath__compile_add.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"1 + 2\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ),
    },
)
