xee-xpath/tests/snapshots/xpath__curly_map.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"map {'a' : 'b'}('a')\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "b",
                ),
            ),
        ),
    },
)
