xee-xpath/tests/snapshots/xpath__default_last.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(\"<doc/>\", \"fn:last()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Long,
                    1,
                ),
            ),
        ),
    },
)
