xee-xpath/tests/snapshots/xpath__default_last_no_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"fn:last()\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "fn:last()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                9,
            ),
        },
    },
)
