xee-xpath/tests/snapshots/xpath__default_position.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(\"<doc/>\", \"fn:position()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Long,
                    1,
                ),
            ),
        ),
    },
)
